Zad 4: 3/3